@@ -6,8 +6,6 @@ source ./build-common.sh
 
 # Remember: Please update also conf/kernel-config, if changing kernel version!
 
-KERNEL_DIR=v2.6
-KERNEL_VERSION=2.6.8.1
 KERNEL=linux-$KERNEL_VERSION 
 KERNEL_URL=http://www.kernel.org/pub/linux/kernel/$KERNEL_DIR 
 KERNEL_ARCHIVE=$KERNEL.tar.bz2
