@@ -8,7 +8,7 @@
 
 # Directory where we start for all subdirs in build processing
 # (use only in this file)
-USER_TOPDIR="/home/$USER/colinux-build"
+USER_TOPDIR="/home/$USER/src/colinux-devel"
 
 # Directory where we store download sources or where we find source already stored
 # In this directoy the cross-tools will be extract and compile (GCC and Co.)
@@ -23,4 +23,13 @@ PREFIX="$USER_TOPDIR/mingw32"
 # Link to kernel, need for colinux daemons build processing
 # default: ../../linux	(is $USER_TOPDIR/linux)
 COLINUX_TARGET_KERNEL_PATH="../../linux"
+
+# Kernel version we are targeting
+#
+KERNEL_DIR="v2.6"
+KERNEL_VERSION="2.6.8.1"
+
+# Install directory
+#
+INSTALL_DIR="$PREFIX/dist"
 
